--- a/views/home.ejs
+++ b/views/home.ejs
@@ -127,7 +127,7 @@
 						<div class="col-md-6">
 							<!-- About iPhone -->
 							<div class="about-iphone wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
-								<img src="images/about-iphone.png" alt="iphone">
+								<img class="img-responsive" src="images/about-iphone.png" alt="iphone">
 							</div>
 						</div>
 						<div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
@@ -282,7 +282,7 @@
 
 						<div class="col-md-4">
 							<div class="feature-iphone">
-								<img class="wow bounceIn" data-wow-duration="1s" src="images/iphone-02.png" alt="feature-iphone">
+								<img class="wow bounceIn img-responsive"" data-wow-duration="1s" src="images/iphone-02.png" alt="feature-iphone">
 							</div>
 						</div>
 
@@ -436,7 +436,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 wow fadeInUp" data-wow-duration="1s">
-						<img src="images/download-screen.png" alt="download screen">
+						<img class="img-responsive" src="images/download-screen.png" alt="download screen">
 					</div>
 				</div>
 			</div>
