responsive css add

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,6 +32,8 @@
 		<link rel="stylesheet" type="text/css" href="css/loso.css">
 		<link rel="stylesheet" type="text/css" href="css/animate.css">
 
+		<!-- Responsive CSS -->
+		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
 	</head>
 
