meta tags for search and mistakes remove

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
 	<head>
 		<title>LoSo - Simple, Clean And Responsive Website</title>
 
 		<!-- meta tags -->
 		<meta charset="utf-8">
-
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Simple, clean, responsive website built with html5, CSS3, Js, jQuery and Bootstrap">
+		<meta name="keywords" content="web, design, html, css, html5, css3, javascript, jquery, bootstrap, development">
 
 
 		<!-- Google fonts -->
@@ -500,9 +501,8 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1">
 						<div class="section-title">
-							<h2>Contact us
-								<p>Nulla blandit sem sed neque pretium mattis. Etiam consectetur eleifend felis porttitor porttitor. Phasellus sit amet augue fringilla, fringilla lectus at, tincidunt ante</p>
-							</h2>	
+							<h2>Contact us</h2>
+							<p>Nulla blandit sem sed neque pretium mattis. Etiam consectetur eleifend felis porttitor porttitor. Phasellus sit amet augue fringilla, fringilla lectus at, tincidunt ante</p>
 						</div>
 					</div>
 				</div>
